# nvim-markers

./: .gitignore  Cargo.toml  build.sh
src/: main.rs  plugin.vim
